--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -59,12 +59,14 @@
 		"ghcr.io/devcontainers/features/dotnet:2": {
 			"version": "6.0"
 		},
-		"ghcr.io/devcontainers-contrib/features/node-asdf:0": {
-			"version": "latest"
-		},
 		"ghcr.io/devcontainers-contrib/features/npm-package:1": {
 			"package": "typescript",
 			"version": "latest"
+		},
+		"ghcr.io/devcontainers/features/node:1": {
+			"nodeGypDependencies": true,
+			"version": "16",
+			"nvmVersion": "0.39"
 		}
 	}
 }
